# MSc_thesis

./: .gitignore  README.md  databricks.yml  literature_study.fdb_latexmk  literature_study.tex  paper.tex  pyproject.toml  requirements.3.11.linux.txt  requirements.txt  thesis.tex  tudelft-report.cls
report/: custom_funcs.tex  main.tex  title.tex  title_scoping_study.tex  tudelft-report.cls
report/bibliography/: zotero_bib.bib
report/chapters/: 0_introduction.tex
report/chapters/literature_study/: 0_nomenclature.tex  1_introduction.tex  2_dp_simulation.tex  3_uncertainty_quantification.tex  4_dynamics_modelling.tex  4_surrogate_modelling.tex  5_pilot_method.tex  6_conclusion.tex  notes.md  notes.tex
report/chapters/literature_study/topics/: PCE.tex  PCE_PDD_hybrids.tex  bayesisan_nn.md  koopman_operators.tex  neural_ode.md
report/chapters/thesis/: performance.md
report/images/diagrams/: .$3dof_mionet.drawio.bkp  .$DP_overview.drawio.bkp  .$DataFlow.drawio.bkp  .$DataFlow.drawio.dtmp  .$latentSDE_training_loop.drawio.bkp  3dof_mionet.drawio  DP_overview.drawio  DataFlow.drawio  latentSDE_training_loop.drawio
src/: databricks_guide.md  databricks_test.ipynb  logging.py  utils.py
src/notebooks/: databricks_test.ipynb  diffrax_latent_sde.ipynb  neural_sde.ipynb
src/prototyping/: data_handling.py  dataloader.py  mainLoop.py
src/prototyping/deepOnet/: 1_dof_deepOnet.ipynb  1_dof_deepOnet.py  deepOnet_1dof.ipynb  deepOnet_1dof.py  deepOnet_main.py  model_deepOnet.py  models.py  train_deepOnet.py  utils.py
src/prototyping/latentSDE/: dataloader.py  latentSDE_main.py  latent_sde_lorenz.py  model_latentSDE.py  test_latentSDE.py  train_latentSDE.py  utils.py
src/prototyping/model/: control.py  gnc.py  guidance.py  mainLoop.py  ornstein_uhlenbeck.py  plotTimeSeries.py  supply.py
src/prototyping/visualisation/: plotSimTimeSeries.py  plotTimeSeries.py  plot_batch_timeseries.py  plot_deepOnet.py  plot_latent_sde.py  plot_losses.py  timestep_difference.py
src/thesis/: mainLoop.py  test_func.py  utils.py
src/thesis/diffrax_latentsde/: diffrax_funcs.py  diffrax_model.py  diffrax_train.py  jax_dataset.py  utils.py  vector_fields.py
src/thesis/mss_model/: __init__.py  control.py  environment.py  gnc.py  hydrodynamics.py  matrices.py  simulation.py  thruster.py  vessel.py
src/thesis/performance_tests/: diffrax_funcs.py  diffrax_latent_sde  diffrax_latent_sde.py  diffrax_model.py  diffrax_train.py  profiling.py
src/thesis/prototyping/: data_handling.py  dataloader.py  mainLoop.py
src/thesis/prototyping/deepOnet/: deepOnet_1dof.ipynb  deepOnet_1dof.py  deepOnet_lu.py  model_deepOnet.py  models.py  train_deepOnet.py  utils.py
src/thesis/prototyping/latentSDE/: latent_sde_lorenz.py  model_latentSDE.py  test_latentSDE.py  train_latentSDE.py  utils.py
src/thesis/prototyping/model/: actuator.py  control.py  supply.py
src/thesis/toy_model/: actuator.py  control.py  gnc.py  guidance.py  ornstein_uhlenbeck.py  supply.py
src/visualisation/: recompile_figures.py  thesis.mplstyle
src/visualisation/general_plotting/: config.py  weather_report.py
src/visualisation/pilot_tests/: plotSimTimeSeries.py  plot_batch_timeseries.py  plot_deepOnet.py  plot_latent_sde.py  plot_losses.py  timestep_difference.py
