[project]
name = "thesis"
version = "1.0.4"
description = "template repository to include overleaf report"
authors = [{ name = "Albert Aperghis", email = "a.w.n.aperghis@student.tudelft.nl" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
package-mode = true
dependencies = [
    "databricks-cli>=0.18.0",
    "diffrax>=0.7.0",
    "equinox>=0.13.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jax; sys_platform == 'win32'",
    "jax[cuda12]>=0.9.0; sys_platform != 'win32'",
    "matplotlib>=3.10.8",
    "mlflow>=2.19; sys_platform == 'win32'",
    "numpy>=2.4.1",
    "optax>=0.2.7",
    "pandas>=2.3.3",
    "pyarrow>=4.0.0",
    "pypdf>=6.7.5",
    "ruff>=0.15.0",
    "scikit-learn>=1.7.2",
    "snakeviz>=2.2.2",
    "torch>=2.10.0; sys_platform == 'win32'",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0; sys_platform == 'win32'",
    "tqdm>=4.67.3",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "databricks-connect>=18.0.3",
    "ruff>=0.15.0",
]
